--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"/>
-    <link rel="stylesheet" href="main.css"/>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="main.css"/>
     <title>CompanyTitle</title>
   </head>
   <body>
@@ -41,8 +41,39 @@
       <div class="jumbotron text-center">
         <div class="jumbotron-title fs-1 mb-2">Company Name</div>
         <div class="jumbotron-subtitle fs-1 mb-2">Company Tagline</div>
-        <button type="button" class="btn btn-primary" href="mailto:carterhandyman@gmail.com">Email</button>
-        <button type="button" class="btn btn-primary" href="tel:314-308-9960">Call</button>
+        <button type="button" class="btn btn-primary mb-2 mx-2" href="mailto:carterhandyman@gmail.com">Email</button>
+        <button type="button" class="btn btn-primary mb-2 mx-2" href="tel:314-308-9960">Call</button>
+      </div>
+      <div class="sections container">
+        <div class="row">
+          <div class="section col-4">
+            <div class="section-header fs-2">Section 1</div>
+            <p class="mx-2">
+              Here, we have a lot of text in case the developer is struggling to think of some meaningful content. This
+              is a placeholder, designed to hold space until it can be replaced by the intended content. This can be
+              anything, but it certainly will not be this. This does not even pertain to this page, but rest assured,
+              the content here will be relevant to the topic of this page.
+            </p>
+          </div>
+          <div class="section col-4">
+            <div class="section-header fs-2">Section 2</div>
+            <p class="mx-2">
+              Here, we have a lot of text in case the developer is struggling to think of some meaningful content. This
+              is a placeholder, designed to hold space until it can be replaced by the intended content. This can be
+              anything, but it certainly will not be this. This does not even pertain to this page, but rest assured,
+              the content here will be relevant to the topic of this page.
+            </p>
+          </div>
+          <div class="section col-4">
+            <div class="section-header fs-2">Section 3</div>
+            <p class="mx-2">
+              Here, we have a lot of text in case the developer is struggling to think of some meaningful content. This
+              is a placeholder, designed to hold space until it can be replaced by the intended content. This can be
+              anything, but it certainly will not be this. This does not even pertain to this page, but rest assured,
+              the content here will be relevant to the topic of this page.
+            </p>
+          </div>
+        </div>
       </div>
     </main>
     <footer class="bg-dark text-white text-center text-italic p-1">&copy; 2021 Company Co.</footer>
